# git-gen

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
finetune/: finetune.ipynb
src/git_gen/: __about__.py  __main__.py  app.py  echo.py  engine.py  generate_commit.py  views.py
tests/: __init__.py  simple.py
